procps-3.2.8 --> procps-3.2.9

per-process swap info available on Linux 2.6.34
HZ failure (constructor ordering issue)                   gen303120 603759
possible to build with make 3.82               gen303120  -- thanks Elias Pipping
top: fix an aliasing problem -- thanks David Owen

procps-3.2.7 --> procps-3.2.8

ps: allow "+" in sort specifications, as in man page     rh208217
ps: recognize SCHED_ISO and SCHED_IDLE
ps: document SCHED_BATCH and add a "see also" for stime
ps: man page less ambiguous
top: normal exit code should be 0     #341272 #354255 rh199174 suse493210
top: misc fixes
pgrep: usage error should exit with 2       #413383
vmstat: use EXIT_FAILURE -- thanks Yoshio Nakamura   #425492
sysctl: fix crash -- thanks Steinar Gunderson      #423704
watch: tolerate umlauts                          #207103
pmap: range limits with -A low,high
update /dev/tty* info to May 2009 devices.txt
don't read off end of string const                rh469495 rh498182

procps-3.2.6 --> procps-3.2.7

top: document H option -- thanks Tony Ernst
top: terabytes -- thanks Tony Ernst
top: CPU usage column width fixes -- thanks Tony Ernst
top: *roff change                                   #326517
ps: SCHED_BATCH is B
ps: fix s format (signals) output with thread display
watch: avoid integer overflow for the time delay
pwdx: buffer overflow fixed -- thanks Ulf Harnhammar
procps.spec needed a slash -- thanks Jesse Brandeburg
w: stale utmp entries snuck in via uninitialized var -- thanks Robert A Basch
pgrep/pkill: fix some realloc-related crashes       #353894
pgrep/pkill: g is criteria (PLD Linux, patch found in locked filing cabinet)
sysctl: use - for stdin (PLD Linux: beware of the leopard)
top: show CPU time stolen from a virtual machine

procps-3.2.5 --> procps-3.2.6

vmstat: /proc/stat buffer big enough for 1024 CPUs
dietlibc needs termios.h for struct winsize -- thanks Thomas Ogrisegg
top: can do per-task display -- thanks John Blackwood     rh114012