@@ -301,7 +301,7 @@ extern int             prefer_bsd_defaults;
 extern int             running_only;
 extern int             screen_cols;
 extern int             screen_rows;
-extern unsigned long   seconds_since_boot;
+extern time_t          seconds_since_boot;
 extern selection_node *selection_list;
 extern unsigned        simple_select;
 extern sort_node      *sort_list;
