@@ -1003,6 +1003,11 @@ elapsed time since the process was started,
 in\ the form\ [[dd\-]hh:]mm:ss.
 T}
 
+etimes	ELAPSED	T{
+elapsed time since the process was started,
+in\ seconds.
+T}
+
 euid	EUID	T{
 effective user\ ID. (alias\ \fBuid\fR).
 T}
