@@ -1,5 +1,6 @@
 procps-3.2.8 --> procps-3.2.9
 
+ps: "etimes" prints elapsed time as decimal seconds
 per-process swap info available on Linux 2.6.34
 HZ failure (constructor ordering issue)                   gen303120 603759
 possible to build with make 3.82               gen303120  -- thanks Elias Pipping
